--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Flight Search</string>
+    <string name="search_icon">Search Icon</string>
+    <string name="search_bar_placeholder">Search for a flight (i.e; FCO)</string>
 </resources>
